# hexapi

./: README.md  onnx_data_local_file_tree.txt  pyproject.toml
chrysalis/: audio_utils.py  cli.py  config.py  logging.py  pipeline.py
chrysalis/llm_query/: api.py  base.py  ollama.py
chrysalis/speech_to_text/: api.py  base.py  sherpa_local.py  whisper_api.py  whisper_local.py
chrysalis/text_to_speech/: api.py  bark.py  base.py  elevenlabs.py  piper_local.py  sherpa_local.py
hexabot/Client/: IP.txt  point.txt
scripts/: convert_piper_onnx_for_sherpa.py
